<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_blur"
    android:orientation="vertical"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/dark"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:paddingHorizontal="20dp"
            android:paddingVertical="10dp"
            android:text="@string/main_title"
            android:textColor="#fafafa"
            android:textSize="24sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:layout_margin="10dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/text"
            android:background="@drawable/question_card"
            android:text="@string/how_to_1"
            android:textSize="18sp"
            android:padding="15dp"
            android:layout_marginBottom="25dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/question_card"
            android:textColor="@color/text"
            android:text="@string/how_to_2"
            android:textSize="18sp"
            android:padding="15dp"
            android:layout_marginBottom="25dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/question_card"
            android:textColor="@color/text"
            android:text="@string/how_to_3"
            android:textSize="18sp"
            android:padding="15dp"
            android:layout_marginBottom="25dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/question_card"
            android:textColor="@color/text"
            android:text="@string/how_to_4"
            android:textSize="18sp"
            android:padding="15dp"
            android:layout_marginBottom="25dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/answer_button"
            android:text="@string/back"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:textColor="@color/text"
            android:onClick="back" />
    </LinearLayout>

</LinearLayout>