<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    tools:context=".activity.MainActivity">

    <LinearLayout
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:background="@color/dark"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:paddingHorizontal="20dp"
            android:paddingVertical="10dp"
            android:text="@string/main_title"
            android:textColor="#fafafa"
            android:textSize="24sp"
            android:textStyle="bold" />

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="54dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/background_blur">

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:columnCount="2"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:rowCount="5">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/start_card"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_gravity="fill"
                android:layout_margin="12dp"
                android:background="@drawable/start_card_bg"
                android:onClick="onToggleLock"
                android:orientation="vertical"
                app:layout_constraintDimensionRatio="1:1">

                <ImageView
                    android:id="@+id/lock_img"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp"
                    app:layout_constraintBottom_toTopOf="@+id/lock"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/lock"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:lines="2"
                    android:maxLines="2"
                    android:padding="7dp"
                    android:text="Start Learning"
                    android:textColor="@color/text"
                    android:textSize="18sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/lock_img" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_gravity="fill"
                android:layout_margin="12dp"
                android:background="@drawable/question_card"
                android:onClick="onAddWord"
                android:orientation="vertical"
                app:layout_constraintDimensionRatio="1:1">

                <ImageView
                    android:id="@+id/add_img"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp"
                    android:src="@drawable/add"
                    app:layout_constraintBottom_toTopOf="@+id/add"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/add"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="5dp"
                    android:gravity="center"
                    android:lines="2"
                    android:maxLines="2"
                    android:padding="7dp"
                    android:text="@string/add"
                    android:textColor="@color/text"
                    android:textSize="18sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/add_img" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_gravity="fill"
                android:layout_margin="12dp"
                android:background="@drawable/question_card"
                android:onClick="onUploadFile"
                android:orientation="vertical"
                app:layout_constraintDimensionRatio="1:1">

                <ImageView
                    android:id="@+id/upload_img"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp"
                    android:src="@drawable/upload"
                    app:layout_constraintBottom_toTopOf="@+id/upload"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/upload"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="5dp"
                    android:gravity="center"
                    android:lines="2"
                    android:maxLines="2"
                    android:padding="7dp"
                    android:text="@string/upload_btn"
                    android:textColor="@color/text"
                    android:textSize="18sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/upload_img" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_gravity="fill"
                android:layout_margin="12dp"
                android:background="@drawable/question_card"
                android:onClick="onDownloadTemplate"
                android:orientation="vertical"
                app:layout_constraintDimensionRatio="1:1">

                <ImageView
                    android:id="@+id/download_image"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp"
                    android:src="@drawable/download"
                    app:layout_constraintBottom_toTopOf="@+id/download_template"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/download_template"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="5dp"
                    android:gravity="center"
                    android:lines="2"
                    android:maxLines="2"
                    android:padding="7dp"
                    android:text="@string/download_btn"
                    android:textColor="@color/text"
                    android:textSize="18sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/download_image" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_gravity="fill"
                android:layout_margin="12dp"
                android:background="@drawable/question_card"
                android:onClick="openHowTo"
                android:orientation="vertical"
                app:layout_constraintDimensionRatio="1:1">

                <ImageView
                    android:id="@+id/help_img"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp"
                    android:src="@drawable/help"
                    app:layout_constraintBottom_toTopOf="@+id/help"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/help"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="5dp"
                    android:gravity="center"
                    android:lines="2"
                    android:maxLines="2"
                    android:padding="7dp"
                    android:text="@string/help"
                    android:textColor="@color/text"
                    android:textSize="18sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/help_img" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_gravity="fill"
                android:layout_margin="12dp"
                android:background="@drawable/question_card"
                android:onClick="openSettings"
                android:orientation="vertical"
                app:layout_constraintDimensionRatio="1:1">

                <ImageView
                    android:id="@+id/settings_img"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp"
                    android:src="@drawable/setting"
                    app:layout_constraintBottom_toTopOf="@+id/settings"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/settings"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="5dp"
                    android:gravity="center"
                    android:lines="2"
                    android:maxLines="2"
                    android:padding="7dp"
                    android:text="@string/settings"
                    android:textColor="@color/text"
                    android:textSize="18sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/settings_img" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_gravity="fill"
                android:layout_margin="12dp"
                android:background="@drawable/question_card"
                android:onClick="openStats"
                android:orientation="vertical"
                app:layout_constraintDimensionRatio="1:1">

                <ImageView
                    android:id="@+id/stats_img"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp"
                    android:src="@drawable/stats"
                    app:layout_constraintBottom_toTopOf="@+id/info"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/info"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="5dp"
                    android:gravity="center"
                    android:lines="2"
                    android:maxLines="2"
                    android:padding="7dp"
                    android:text="@string/info_btn"
                    android:textColor="@color/text"
                    android:textSize="18sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/stats_img" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_gravity="fill"
                android:layout_margin="12dp"
                android:background="@drawable/question_card"
                android:onClick="openThx"
                android:orientation="vertical"
                app:layout_constraintDimensionRatio="1:1">

                <ImageView
                    android:id="@+id/thx_img"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp"
                    android:src="@drawable/heart"
                    app:layout_constraintBottom_toTopOf="@+id/thx"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/thx"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="5dp"
                    android:gravity="center"
                    android:lines="2"
                    android:maxLines="2"
                    android:padding="7dp"
                    android:text="@string/Thanks_btn"
                    android:textColor="@color/text"
                    android:textSize="18sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/thx_img" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_gravity="fill"
                android:layout_margin="12dp"
                android:background="@drawable/question_card"
                android:onClick="onDelete"
                android:orientation="vertical"
                app:layout_constraintDimensionRatio="1:1">

                <ImageView
                    android:id="@+id/delete_img"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp"
                    android:src="@drawable/delete"
                    app:layout_constraintBottom_toTopOf="@+id/trash"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/trash"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="5dp"
                    android:gravity="center"
                    android:lines="2"
                    android:maxLines="2"
                    android:padding="7dp"
                    android:text="@string/delete_btn"
                    android:textColor="@color/text"
                    android:textSize="18sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/delete_img" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </GridLayout>
    </ScrollView>

    <TextView
        android:id="@+id/version_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/dark"
        android:fontFamily="serif"
        android:gravity="center"
        android:paddingTop="6dp"
        android:paddingBottom="6dp"
        android:text="@string/version"
        android:textColor="#fafafa"
        android:textSize="14sp" />

</RelativeLayout>